changes to problem 4

--- a/Lab1/TM-Lab1.ipynb
+++ b/Lab1/TM-Lab1.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 143,
    "id": "2c92aa93-cf15-4e1c-975e-fea9bbe0b0c4",
    "metadata": {
     "deletable": false,
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 144,
    "id": "fd4982e3-3df4-4837-97b5-4c300b0d4a20",
    "metadata": {
     "deletable": false,
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 145,
    "id": "9bb955a7-68d4-4e01-b0bd-16ae110af477",
    "metadata": {},
    "outputs": [
@@ -139,57 +139,102 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>Brick Breaker Star: Space King</td>\n",
-       "      <td>Introducing the best Brick Breaker game that e...</td>\n",
+       "      <th>0</th>\n",
+       "      <td>10000000</td>\n",
+       "      <td>﻿10000000 is a Dungeon Crawling Puzzle RPG Mat...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>Brick Classic - Brick Game</td>\n",
-       "      <td>Classic Brick Game!\\n\\nBrick Classic is a popu...</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1177 Vårdguiden</td>\n",
+       "      <td>I 1177 Vårdguidens app får du tillgång till 11...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>Bricks Breaker - Glow Balls</td>\n",
-       "      <td>Bricks Breaker - Glow Balls is a addictive and...</td>\n",
+       "      <th>2</th>\n",
+       "      <td>123 Draw🎨 Toddler counting for kids Drawing games</td>\n",
+       "      <td>Need counting games for kids &amp; drawing for tod...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>Bricks Breaker Quest</td>\n",
-       "      <td>How to play\\n- The ball flies to wherever you ...</td>\n",
+       "      <th>3</th>\n",
+       "      <td>123 Kids Fun MUSIC - Kids Music Educational Games</td>\n",
+       "      <td>Beautiful and simple music application for tod...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>Brothers in Arms® 3</td>\n",
-       "      <td>Fight brave soldiers from around the globe on ...</td>\n",
+       "      <th>4</th>\n",
+       "      <td>123 number games for kids -  Count &amp; Tracing</td>\n",
+       "      <td>A Fun and intuitive numbers game for your baby...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1609</th>\n",
+       "      <td>고스톱 PLUS (무료 맞고 게임)</td>\n",
+       "      <td>심심할 때 한번씩 즐기는 고스톱(맞고).\\n복잡하고 요란한 화면이 부담스러우셨나요?...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1610</th>\n",
+       "      <td>기적의 검</td>\n",
+       "      <td>소지섭, 안젤리나가 선택한 바로 그 게임!\\n\\n★ 공식카페에서 구글 사전예약 한정...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1611</th>\n",
+       "      <td>이사만루2019</td>\n",
+       "      <td>[2019년 8월 업데이트]\\n- 신규 레전드 카드 추가\\n- 메인 화면 이벤트 시...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1612</th>\n",
+       "      <td>컴투스프로야구2019</td>\n",
+       "      <td>★ 레전드 등급 추가로 더욱 강력해진 2019 메이저 업데이트 ★\\n\\n# 대한민국...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1613</th>\n",
+       "      <td>🐱🐱Cute Cat - My 3D Virtual Pet</td>\n",
+       "      <td>Do you want to adopt a little cat but can’t do...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1614 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               name  \\\n",
-       "200  Brick Breaker Star: Space King   \n",
-       "201      Brick Classic - Brick Game   \n",
-       "202     Bricks Breaker - Glow Balls   \n",
-       "203            Bricks Breaker Quest   \n",
-       "204             Brothers in Arms® 3   \n",
+       "                                                   name  \\\n",
+       "0                                              10000000   \n",
+       "1                                       1177 Vårdguiden   \n",
+       "2     123 Draw🎨 Toddler counting for kids Drawing games   \n",
+       "3     123 Kids Fun MUSIC - Kids Music Educational Games   \n",
+       "4          123 number games for kids -  Count & Tracing   \n",
+       "...                                                 ...   \n",
+       "1609                                고스톱 PLUS (무료 맞고 게임)   \n",
+       "1610                                              기적의 검   \n",
+       "1611                                           이사만루2019   \n",
+       "1612                                        컴투스프로야구2019   \n",
+       "1613                     🐱🐱Cute Cat - My 3D Virtual Pet   \n",
        "\n",
-       "                                           description  \n",
-       "200  Introducing the best Brick Breaker game that e...  \n",
-       "201  Classic Brick Game!\\n\\nBrick Classic is a popu...  \n",
-       "202  Bricks Breaker - Glow Balls is a addictive and...  \n",
-       "203  How to play\\n- The ball flies to wherever you ...  \n",
-       "204  Fight brave soldiers from around the globe on ...  "
+       "                                            description  \n",
+       "0     ﻿10000000 is a Dungeon Crawling Puzzle RPG Mat...  \n",
+       "1     I 1177 Vårdguidens app får du tillgång till 11...  \n",
+       "2     Need counting games for kids & drawing for tod...  \n",
+       "3     Beautiful and simple music application for tod...  \n",
+       "4     A Fun and intuitive numbers game for your baby...  \n",
+       "...                                                 ...  \n",
+       "1609  심심할 때 한번씩 즐기는 고스톱(맞고).\\n복잡하고 요란한 화면이 부담스러우셨나요?...  \n",
+       "1610  소지섭, 안젤리나가 선택한 바로 그 게임!\\n\\n★ 공식카페에서 구글 사전예약 한정...  \n",
+       "1611  [2019년 8월 업데이트]\\n- 신규 레전드 카드 추가\\n- 메인 화면 이벤트 시...  \n",
+       "1612  ★ 레전드 등급 추가로 더욱 강력해진 2019 메이저 업데이트 ★\\n\\n# 대한민국...  \n",
+       "1613  Do you want to adopt a little cat but can’t do...  \n",
+       "\n",
+       "[1614 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[200:205]"
+    "df"
    ]
   },
   {
@@ -202,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 146,
    "id": "595bb7af-5ee4-4b8e-8f5e-df5aaae688d9",
    "metadata": {},
    "outputs": [
@@ -217,7 +262,7 @@
        "Name: description, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 147,
    "id": "1a2a6fc6-dee8-4140-bf7a-1a245e60a1b3",
    "metadata": {
     "deletable": false,
@@ -268,7 +313,7 @@
     "import spacy\n",
     "nlp = spacy.load('en_core_web_sm', disable=['parser', 'ner', 'textcat'])\n",
     "\n",
-    "def preprocess(text):\n",
+    "def preprocess(text):                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \n",
     "    \"\"\"Preprocess the given text by tokenising it, removing any stop words, \n",
     "    replacing each remaining token with its lemma (base form), and discarding \n",
     "    all lemmas that contain non-alphabetical characters.\n",
@@ -280,6 +325,7 @@
     "      The list of remaining lemmas after preprocessing (represented as strings).\n",
     "    \"\"\"\n",
     "    doc = nlp(text) # Transform into spaCy object.\n",
+    "    \n",
     "    return [token.lemma_ for token in doc if token.is_alpha and not token.is_stop]"
    ]
   },
@@ -295,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 148,
    "id": "e918affb-f8aa-4cbf-9cbe-b03b9251e941",
    "metadata": {
     "deletable": false,
@@ -362,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 149,
    "id": "0ca674d8-c2df-4c8f-bb3d-6d59bdc401fb",
    "metadata": {
     "deletable": false,
@@ -390,7 +436,6 @@
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "\n",
     "vectorizer = TfidfVectorizer(tokenizer = preprocess)\n",
     "X = vectorizer.fit_transform(df['description'])"
    ]
@@ -400,14 +445,14 @@
    "id": "12c88775-0daf-4c6a-8bc0-9a101bb1fa45",
    "metadata": {},
    "source": [
-    "### 🤞 Test your code\n",
+    "# 🤞 Test your code\n",
     "\n",
     "Test your implementation by running the following cell:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 150,
    "id": "edb03bab-edee-4b5d-98e3-c0fdb36ae507",
    "metadata": {
     "deletable": false,
@@ -483,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 151,
    "id": "80145071-fe5b-4366-87d0-99c39567a736",
    "metadata": {
     "deletable": false,
@@ -508,7 +553,7 @@
        "NearestNeighbors(n_neighbors=10)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 152,
    "id": "d4efd824-0122-40de-9fc6-efd071be906a",
    "metadata": {
     "deletable": false,
@@ -579,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 153,
    "id": "3d30a52e-bdac-412b-b9c4-8e9cc17436a6",
    "metadata": {
     "deletable": false,
@@ -736,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 178,
    "id": "5c9df0a4-2c15-4d2e-ad21-f121f39a4c72",
    "metadata": {
     "deletable": false,
@@ -754,9 +799,11 @@
    "outputs": [],
    "source": [
     "feature_names = vectorizer.get_feature_names_out()\n",
-    "data = [(feature_name, X.data[i]) for i, feature_name in enumerate(feature_names)]\n",
+    "idf_values = vectorizer.idf_ # idf-values\n",
     "\n",
-    "terms = pd.DataFrame(data, columns=['term','idf']).sort_values(['idf', 'term'])"
+    "data = [(feature_name, idf) for feature_name, idf in zip(feature_names, idf_values)]\n",
+    "\n",
+    "terms = pd.DataFrame(data, columns=['Name', 'IDF']).sort_values(['IDF', 'Name'])"
    ]
   },
   {
@@ -764,12 +811,12 @@
    "id": "a7a2b1dd-82fd-49ae-8771-c4ecd58bbe64",
    "metadata": {},
    "source": [
-    "The following cell prints the 10 terms with the lowest/highest idf, which you can use to check if your results appear correct:"
+    "# The following cell prints the 10 terms with the lowest/highest idf, which you can use to check if your results appear correct:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 179,
    "id": "56f80f09-da92-4384-9989-42e650416d91",
    "metadata": {
     "deletable": false,
@@ -792,30 +839,30 @@
      "output_type": "stream",
      "text": [
       "Terms with the lowest idf:\n",
-      "            term       idf\n",
-      "14194  simplifie  0.003303\n",
-      "14206       sina  0.003737\n",
-      "14198     simply  0.004171\n",
-      "14189   simoleon  0.004299\n",
-      "14188     simmer  0.004713\n",
-      "9026        like  0.004858\n",
-      "2622      chilie  0.005076\n",
-      "14202  simulator  0.005243\n",
-      "14183    simeone  0.005281\n",
-      "14181    simcash  0.005454\n",
+      "          Name       IDF\n",
+      "6081      game  1.296180\n",
+      "11929     play  1.416360\n",
+      "5405   feature  1.472359\n",
+      "5828      free  1.584695\n",
+      "10609      new  1.665665\n",
+      "17779    world  1.781792\n",
+      "16050     time  1.809229\n",
+      "689        app  1.838871\n",
+      "5928       fun  1.859132\n",
+      "16913      use  1.873860\n",
       "\n",
       "Terms with the highest idf:\n",
-      "         term       idf\n",
-      "16083   tired  0.764548\n",
-      "18248     đậu  0.770606\n",
-      "16149   tooth  0.781307\n",
-      "15251    sumo  0.786507\n",
-      "14296   skate  0.786742\n",
-      "17827     wwi  0.816649\n",
-      "14248  sitter  0.818318\n",
-      "21278      특별  0.820650\n",
-      "20824       내  0.902087\n",
-      "14136     sid  0.942296\n"
+      "        Name       IDF\n",
+      "21346  회원가입에  7.693943\n",
+      "21347    회원을  7.693943\n",
+      "21348    획득한  7.693943\n",
+      "21349     효과  7.693943\n",
+      "21350    효과음  7.693943\n",
+      "21352    ﬁnd  7.693943\n",
+      "21353  ﬁnger  7.693943\n",
+      "21354  ﬁnish  7.693943\n",
+      "21355   ﬁrst  7.693943\n",
+      "21356    ﬂye  7.693943\n"
      ]
     }
    ],
@@ -844,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 180,
    "id": "521a307f-eeab-48ec-b139-d5111e2b2ba8",
    "metadata": {
     "deletable": false,
@@ -873,21 +920,23 @@
     "    \"\"\"\n",
     "    text = vectorizer.transform([text])\n",
     "    idx = text.nonzero()[1] # indices\n",
-    "    idf = text.data # idf-values\n",
+    "    tf_idf = text.data # tf-idf-values\n",
     "    feature_names = vectorizer.get_feature_names_out()\n",
     "\n",
     "    # Extract text terms from feature names using idx\n",
     "    name_vec = [feature_names[i] for i in idx]\n",
     "\n",
-    "    data = [(idx, name, idf) for idx, name, idf in zip(idx, name_vec, idf)]\n",
+    "    data = [(idx, name, tf_idf) for idx, name, tf_idf in zip(idx, name_vec, tf_idf)]\n",
     "    \n",
-    "    return pd.DataFrame(data, columns=['Index', 'Name', 'IDF']).sort_values('IDF', ascending=False)[0:n]['Name']"
+    "    return pd.DataFrame(data, columns=['Index', 'Name', 'TF-IDF']).sort_values('TF-IDF', ascending=False)[0:n]['Name']"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "07a4a6b3-78dd-4ece-9c56-fa73c6319ec0",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 🤞 Test your code\n",
     "\n",
@@ -896,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 174,
    "id": "eb0344ed-f785-41c0-b74b-80208f148ab8",
    "metadata": {
     "deletable": false,
